--- a/onboarding_command_mappers/paloalto_panos.yml
+++ b/onboarding_command_mappers/paloalto_panos.yml
@@ -36,10 +36,10 @@
 # Job Parameter Variables
 # =======================
 # The following variables should be provided by the job parameters:
-# - namespace_name: Namespace name (e.g., "Global") for VRFs and other namespace-dependent objects
-# - namespace: Alternative namespace variable (UUID or name) - used as fallback
-# - vlan_status_name: Status name for VLANs (e.g., "Active")
-# - default_prefix_status_name: Default status name - used as fallback for VLAN status
+# - namespace: Namespace name (e.g., "Global") from job form dropdown
+# - interface_status: Interface status name (e.g., "Active") from job form dropdown
+# - default_prefix_status: Prefix/VLAN status name (e.g., "Active") from job form dropdown
+# - ip_address_status: IP address status name (e.g., "Active") from job form dropdown
 #
 # Hardcoded Values (Platform-Specific)
 # =====================================
@@ -294,8 +294,8 @@ sync_network_data:
               {%- elif ns.in_vr and ns.level == ns.vr_level + 1 -%}
                 {%- set ns.current_vr = stripped.split('{')[0].strip() -%}
                 {%- if ns.current_vr not in vrfs -%}
-                  {# Use namespace from job parameters, fallback to None if not provided #}
-                  {%- set vrf_namespace = namespace_name | default(namespace | default(none)) -%}
+                  {# Use namespace from job parameters #}
+                  {%- set vrf_namespace = namespace | default(none) -%}
                   {%- set _ = vrfs.update({ns.current_vr: {"name": ns.current_vr, "namespace": vrf_namespace, "description": "Imported from Palo Alto"}}) -%}
                 {%- endif -%}
               {%- endif -%}
@@ -328,9 +328,9 @@ sync_network_data:
                 {%- if tag > 0 and tag < 4095 -%}
                   {%- set tag_str = tag | string -%}
                   {%- if tag_str not in vlans -%}
-                    {# Use status from job parameters, fallback to None if not provided #}
+                    {# Use default_prefix_status from job parameters for VLAN status #}
                     {# Explicitly set locations to empty list to prevent automatic location assignment #}
-                    {%- set vlan_status = vlan_status_name | default(default_prefix_status_name | default(none)) -%}
+                    {%- set vlan_status = default_prefix_status | default(none) -%}
                     {%- set _ = vlans.update({tag_str: {"vid": tag, "name": "VLAN" ~ tag_str, "status": vlan_status, "locations": []}}) -%}
                   {%- endif -%}
                 {%- endif -%}
@@ -736,8 +736,8 @@ sync_network_data:
                 {%- set vrf_name = ns.vrf_map.get(parent_name, none) -%}
               {%- endif -%}
               {# Convert VRF name to dictionary format expected by plugin #}
-              {# Use namespace from job parameters, fallback to None if not provided #}
-              {%- set vrf_namespace = namespace_name | default(namespace | default(none)) -%}
+              {# Use namespace from job parameters #}
+              {%- set vrf_namespace = namespace | default(none) -%}
               {%- set iface_vrf = {"name": vrf_name, "namespace": vrf_namespace} if vrf_name else none -%}
               {# Determine 802.1Q mode and VLAN assignments #}
               {%- set dot1q_mode = '' -%}
