--- a/onboarding_command_mappers/paloalto_panos.yml
+++ b/onboarding_command_mappers/paloalto_panos.yml
@@ -296,7 +296,8 @@ sync_network_data:
                 {%- set ns.vr_level = ns.level -%}
               {%- elif ns.in_vr and ns.level == ns.vr_level + 1 -%}
                 {%- set ns.current_vr = stripped.split('{')[0].strip() -%}
-                {%- if ns.current_vr not in vrfs -%}
+                {# Only create VRF if it's a valid name (not just a number or empty) #}
+                {%- if ns.current_vr and ns.current_vr not in vrfs and not (ns.current_vr | int(default=-1) >= 0) -%}
                   {# Namespace will be assigned by plugin based on job parameters #}
                   {%- set _ = vrfs.update({ns.current_vr: {"name": ns.current_vr, "description": "Imported from Palo Alto"}}) -%}
                 {%- endif -%}
